--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,6 @@ parameters:
         - tests/
 
     excludePaths:
-        - '%rootDir%/../../../src/Generated/*'
+        - %rootDir%/../../../src/Generated/*
         - %rootDir%/../../../tests/*
         - %rootDir%/../../../config/*
